--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 	font-family:'Roboto', sans-serif ;
 	height: 100vh;
 	margin: 0;
-    background-color: #FAF0D7;
+    background-color: #ffff;
 }
 
 header{
@@ -26,7 +26,8 @@ header h1{
     align-items: center;
 }
 .settings-section{
-    background-color: #CCEEBC;
+    background-color: #7D8491;
+    color: white;
     padding: 20px;
     border-radius: 10px;
     display: flex;
